--- a/about.html
+++ b/about.html
@@ -1,131 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+  <head>    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ashton James | About</title>
     <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <!-- CSS files -->
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/header-nav.css" />
     <link rel="stylesheet" href="css/about.css" />
     <!-- favicon -->
-    <link
-      rel="icon"
-      type="image/ico"
-      href="web_portfolio_images/Logo/portfolio_logo_favicon.ico"
-    />
+    <link rel="icon" type="image/ico" href="web_portfolio_images/Logo/portfolio_logo_favicon.ico" />
   </head>
-  <body>
-    <!-- Background Video -->
-    <video
-      class="bg-video"
-      autoplay
-      muted
-      loop
-      playsinline
-      preload="metadata"
-      width="1280"
-      height="720"
-    >
+  <body>    <!-- Background Video -->
+    <video class="bg-video" autoplay muted loop playsinline preload="metadata" width="1280" height="720">
       <source src="videos/portfolio_bg480.mp4" type="video/mp4" />
-      <track
-        kind="descriptions"
-        src="videos/portfolio_bg.vtt"
-        label="Video Description"
-        default
-      />
-      Your browser does not support the video tag.
-    </video>
-    <!-- header -->
+      <track kind="descriptions" src="videos/portfolio_bg.vtt" label="Video Description" default />
+      Your browser does not support the video tag.</video>    <!-- header -->
     <header class="header">
       <div class="logo">
-        <img
-          src="web_portfolio_images/Logo/portfolio_logo_android_chrome_192x192.png"
-          alt="Ashton James Logo"
-          height="24"
-          width="24"
-        />
-      </div>
+        <img src="web_portfolio_images/Logo/portfolio_logo_android_chrome_192x192.png" alt="Ashton James Logo" height="24" width="24" /></div>
       <!-- quote -->
       <div class="quote">Turn your idyllic fantasy into digital reality</div>
       <!-- socials -->
       <div class="socials">
-        <img
-          id="socials-logo"
-          src="web_portfolio_images/SVGs/socials_icon.svg"
-          alt="Socials logo"
-        />
-        <div class="socials-dropdown">
+        <img id="socials-logo" src="web_portfolio_images/SVGs/socials_icon.svg" alt="Socials logo" />        <div class="socials-dropdown">
           <div class="top-highlight"></div>
           <!-- drop down content -->
           <h6>Follow Me</h6>
-          <a
-            href="https://github.com/Kscopee"
-            target="_blank"
-            class="social-icon"
-          >
-            <img
-              src="web_portfolio_images/SVGs/github_icon_white.svg"
-              alt="GitHub"
-            />
-            GitHub
-          </a>
-          <a
-            href="https://www.linkedin.com/in/ashton-james-caspe-bba704363"
-            target="_blank"
-            class="social-icon"
-          >
-            <img
-              src="web_portfolio_images/SVGs/likedin_icon_white.svg"
-              alt="LinkedIn"
-            />
-            LinkedIn
-          </a>
-        </div>
-      </div>
-    </header>
-
-    <!-- left navbar -->
+          <a href="https://github.com/Kscopee" target="_blank" class="social-icon">
+            <img src="web_portfolio_images/SVGs/github_icon_white.svg" alt="GitHub" />GitHub</a>
+          <a href="https://www.linkedin.com/in/ashton-james-caspe-bba704363" target="_blank" class="social-icon">
+            <img src="web_portfolio_images/SVGs/likedin_icon_white.svg" alt="LinkedIn" />LinkedIn</a></div></div>
+    </header>    <!-- left navbar -->
     <nav class="vertical-nav" aria-label="Main Navigation">
       <ul>
-        <li>
-          <a href="index.html" class="nav-link" data-tooltip="Home">
-            <img
-              src="web_portfolio_images/SVGs/home_icon_white.svg"
-              alt="Home Page"
-            />
-          </a>
-        </li>
-        <li>
-          <a href="about.html" class="nav-link active" data-tooltip="About">
-            <img
-              src="web_portfolio_images/SVGs/person_icon_white.svg"
-              alt="About Page"
-            />
-          </a>
-        </li>
-        <li>
-          <a href="tech-stack.html" class="nav-link" data-tooltip="Tech Stack">
-            <img
-              src="web_portfolio_images/SVGs/stack_icon_white.svg"
-              alt="Tech Stack"
-            />
-          </a>
-        </li>
-      </ul>
-    </nav>
+        <li><a href="index.html" class="nav-link" data-tooltip="Home">
+            <img src="web_portfolio_images/SVGs/home_icon_white.svg" alt="Home Page" /></a></li>
+        <li><a href="about.html" class="nav-link active" data-tooltip="About">
+            <img src="web_portfolio_images/SVGs/person_icon_white.svg" alt="About Page" /></a></li>
+        <li><a href="tech-stack.html" class="nav-link" data-tooltip="Tech Stack">
+            <img src="web_portfolio_images/SVGs/stack_icon_white.svg" alt="Tech Stack" /></a></li></ul></nav>
 
     <!-- main content -->
     <main class="main-content">
       <!-- ===== ABOUT ===== -->
       <section id="about" class="container-fluid p-4">
-        <div class="row">
-          <!-- top left -->
+        <div class="row">          <!-- top left -->
           <div class="col-12 about-top-left text-center mb-4">
             <h2 class="display-4">about.</h2>
             <h2 class="display-5">Ashton James D. Caspe</h2>
@@ -133,63 +54,27 @@
             <!-- info list - simplified -->
             <dl class="bio-list d-inline-block text-start">
               <dt>Course:</dt>
-              <dd>Information Technology (Soon to be Degree)</dd>
-            </dl>
+              <dd>Information Technology (Soon to be Degree)</dd></dl>
 
             <!-- Skills Distribution Chart -->
             <div class="skills-chart-container mt-4">
               <h4 class="d-none">Skills Distribution</h4>
               <div class="chart-wrapper">
-                <canvas id="skillsPieChart"></canvas>
-              </div>
-            </div>
-          </div>
-
-          <!-- bottom section -->
+                <canvas id="skillsPieChart"></canvas></div></div></div><!-- bottom section -->
           <div class="col-md-6 about-bottom-left">
             <div class="abstract-shape-container-left">
               <div class="abstract-shape-about"></div>
-              <img
-                src="web_portfolio_images/PNGs/aboute_page_picture.png"
-                alt="Ashton"
-                class="profile-photo-about img-fluid"
-              />
-              <div class="shape-highlight-about"></div>
-            </div>
-          </div>
+              <img src="web_portfolio_images/PNGs/aboute_page_picture.png" alt="Ashton" class="profile-photo-about img-fluid" />
+              <div class="shape-highlight-about"></div></div></div>
 
           <div class="col-md-6 about-bottom-right">
             <article class="about-rant">
               <h3 class="mb-3">WAIT A MINUTE WHO ARE YOU?</h3>
-              <p class="mb-3">
-                My journey into the world of technology began with a spark
-                ignited by Nier: Automata—a game that masterfully intertwines
-                existential philosophy with immersive storytelling. This
-                experience deepened my fascination with how narratives and
-                interactivity can coexist, prompting me to pursue IT as a
-                student. Beyond code, I channel creativity through strumming
-                melodies on my guitar, exploring the rich tapestries of anime,
-                and dissecting the nuances of literary classics. These passions
-                collectively shape my perspective, blending analytical rigor
-                with artistic sensibility.
-              </p>
-              <p class="mb-3">
-                As an aspiring software and web developer, I aim to craft
-                solutions that transcend functionality. My goal is to build
-                applications and digital experiences that serve as both
-                practical tools and reflective mirrors—empowering users to
-                navigate life's challenges while inviting introspection. Whether
-                through sleek interfaces or dynamic systems, I strive to weave
-                storytelling into technology, creating platforms that resonate
-                on a human level and leave lasting impressions.
-              </p>
-            </article>
-          </div>
+              <p class="mb-3">My journey into the world of technology began with a spark ignited by Nier: Automata—a game that masterfully intertwines existential philosophy with immersive storytelling. This experience deepened my fascination with how narratives and interactivity can coexist, prompting me to pursue IT as a student. Beyond code, I channel creativity through strumming melodies on my guitar, exploring the rich tapestries of anime, and dissecting the nuances of literary classics. These passions collectively shape my perspective, blending analytical rigor with artistic sensibility.</p>
+              <p class="mb-3">As an aspiring software and web developer, I aim to craft solutions that transcend functionality. My goal is to build applications and digital experiences that serve as both practical tools and reflective mirrors—empowering users to navigate life's challenges while inviting introspection. Whether through sleek interfaces or dynamic systems, I strive to weave storytelling into technology, creating platforms that resonate on a human level and leave lasting impressions.</p></article></div>
         </div>
       </section>
-    </main>
-
-    <!-- Bootstrap JS and its dependencies -->
+    </main>    <!-- Bootstrap JS and its dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <!-- Chart.js -->
@@ -197,6 +82,5 @@
     <!-- local java scripts -->
     <script src="js/navbar.js"></script>
     <script src="js/skills-chart.js"></script>
-    <script src="js/video-background.js"></script>
-  </body>
+    <script src="js/video-background.js"></script></body>
 </html>
